rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__highlights_backticks_in_messages.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Error with `code` in message (test-rule)

/test/file.erb:2:5

      1 │ line 1
  →   2 │ line <error> content
        │      ~~~~~
      3 │ line 3
