rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__keeps_a_single_marker_for_single_line_diagnostics.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Test error message (test-rule)

/test/file.erb:2:5

      1 │ line 1
  →   2 │ line <error> content
        │      ~~~~~
      3 │ line 3
