rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__marks_every_line_the_diagnostic_spans_and_expands_the_trailing_context.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[warning] Multi-line offense (multi-line-rule)

/test/file.erb:4:4

      2 │ 
      3 │   <div id="gems">
  →   4 │     <% @gems.each do |topic_gem| %>
        │     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  →   5 │       <%= render partial: "gem_card" %>
        │       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  →   6 │     <% end %>
        │     ~~~~~~~~~
      7 │   </div>
      8 │
