rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__preserves_colors_when_extracting_from_end_of_styled_line.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: result
---
[[1m[91merror[0m[0m] End content issue (end-content)

[36m/test/file.erb[0m:[36m1:95[0m

[91m  → [0m[1m  1[0m [90m│[0m [2m…[0m-too-long[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m[38;2;171;178;191mShortEnd[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[2m…[0m
        [90m│[0m             [91m~~~~~~~~[0m
