rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__preserves_syntax_highlighting_colors_in_truncated_output.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: result
---
[[1m[91merror[0m[0m] Line too long (line-length)

[36m/test/file.erb[0m:[36m1:1[0m

[91m  → [0m[1m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mthis-is-a-very-long-cl[2m…[0m
        [90m│[0m  [91m~~~~[0m
