rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__renders_a_single_warning_diagnostic.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[warning] Test error message (test-rule)

/test/file.erb:2:5

      1 │ line 1
  →   2 │ line <warn> content
        │      ~~~~~
      3 │ line 3
