rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__respects_the_no_color_setting.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: result
---
[error] Test error message (test-rule)

/test/file.erb:2:5

      1 │ line 1
  →   2 │ line <error> content
        │      ~~~~~
      3 │ line 3
