rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__shows_ellipsis_at_beginning_when_diagnostic_is_at_end_of_long_line.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[warning] Content should be more descriptive (content-description)

/test/file.erb:1:95

  →   1 │ …ncated-when-the-line-is-too-long">Content</div>
        │                                    ~~~~~~~
