rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__shows_ellipsis_at_end_when_diagnostic_is_at_start_of_long_line.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Class name should be shorter (class-name-length)

/test/file.erb:1:13

  →   1 │ <div class="this-is-a-very-long-class-name-t…
        │              ~~~~~~~~~~~~~~~~~~~~
