rust/herb-highlighter/tests/snapshots/diagnostic_renderer_test__shows_ellipsis_on_both_sides_when_diagnostic_is_in_middle_of_long_line.snap
---
source: herb-highlighter/tests/diagnostic_renderer_test.rs
expression: strip_ansi_colors(&result)
---
[error] Avoid 'should-be' in class names (class-naming-convention)

/test/file.erb:1:45

  →   1 │ …-class-name-that-should-be-truncated-when-th…
        │                ~~~~~~~~~
